unpackaged/main/default/objects/EDI_Checklist__c/EDI_Checklist__c.object-meta.xml
<CustomObject>
    <description>Captures EDI checklist to verify Group qualifies for</description>
    <label>EDI Checklist</label>
    <nameField>
        <displayFormat>ED-{00000}</displayFormat>
        <label>EDI Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDI Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>