unpackaged/main/default/objects/EDI_Checklist__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>