unpackaged/main/default/objects/EDI_Checklist__c/fields/Benefit_Paid_Approval__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Paid_Approval__c</fullName>
    <formula>AND(Benefits_100_ER_Paid__c,Member_Count__c &lt; 100, Premium_Annualized__c &lt; 50000,Established_Vendor__c)</formula>
    <label>Benefit_Paid_Approval</label>
    <type>Checkbox</type>
</CustomField>