unpackaged/main/default/objects/EDI_Checklist__c/fields/Benefits_100_ER_Paid__c.field-meta.xml
<CustomField>
    <fullName>Benefits_100_ER_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefits 100% ER Paid</label>
    <type>Checkbox</type>
</CustomField>