unpackaged/main/default/objects/EDI_Checklist__c/fields/Billed_benefits_Products__c.field-meta.xml
<CustomField>
    <fullName>Billed_benefits_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed Benefits/Products</label>
    <type>Checkbox</type>
</CustomField>