unpackaged/main/default/objects/EDI_Checklist__c/fields/Billing_Method_N_Size_Approval__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method_N_Size_Approval__c</fullName>
    <formula>AND(Established_Vendor__c ,OR(INCLUDES( Billing_Method__c,&quot;List&quot;), INCLUDES( Billing_Method__c,&quot;Online&quot;))  ,OR( Member_Count__c  &gt;=  100, Premium_Annualized__c &gt;=  50000))</formula>
    <label>Billing_Method_N_Size Approval</label>
    <type>Checkbox</type>
</CustomField>