unpackaged/main/default/objects/EDI_Checklist__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency, Other, EDI Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EDI Checklists</relationshipLabel>
    <relationshipName>EDI_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>