unpackaged/main/default/objects/EDI_Checklist__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>