unpackaged/main/default/objects/EDI_Checklist__c/fields/ECR__c.field-meta.xml
<CustomField>
    <fullName>ECR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ECR GI Only</inlineHelpText>
    <label>ECR</label>
    <type>Checkbox</type>
</CustomField>