unpackaged/main/default/objects/EDI_Checklist__c/fields/EDI_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EDI_Vendor__c</fullName>
    <formula>Case__r.EDIVendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EDI Vendor</label>
    <type>Text</type>
</CustomField>