unpackaged/main/default/objects/EDI_Checklist__c/fields/Established_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Established_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Established Vendor</label>
    <type>Checkbox</type>
</CustomField>