unpackaged/main/default/objects/EDI_Checklist__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>IF  (ISBLANK( Case__r.Group_Name__c ) || ISNULL(Case__r.Group_Name__c),  Case__r.Master_Group__r.Name ,  Case__r.Group_Name__r.Name  )</formula>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>