unpackaged/main/default/objects/EDI_Checklist__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <formula>IF ( ISBLANK(Case__r.Group_NBR__c) || ISNULL(Case__r.Group_NBR__c),  Case__r.Master_Group_Policy__c ,  Case__r.Group_NBR__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Number</label>
    <type>Text</type>
</CustomField>