unpackaged/main/default/objects/EDI_Checklist__c/fields/Individual_Lines_Products__c.field-meta.xml
<CustomField>
    <fullName>Individual_Lines_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Lines/Products</label>
    <type>Checkbox</type>
</CustomField>