unpackaged/main/default/objects/EDI_Checklist__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <description>Number of Members in a Group</description>
    <label>Member Count (Total / Eligible)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>