unpackaged/main/default/objects/EDI_Checklist__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>Case__r.Master_Group_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>