unpackaged/main/default/objects/EDI_Checklist__c/fields/Premium_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Premium_Annualized__c</fullName>
    <label>Premium (Annualized)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>