unpackaged/main/default/objects/EDI_Checklist__c/fields/Recommendation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommendation Notes</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>