unpackaged/main/default/objects/EDI_Checklist__c/fields/Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Request</label>
    <type>Checkbox</type>
</CustomField>