unpackaged/main/default/objects/EDI_Checklist__c/fields/Special_Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Special_Request_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Request Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>