unpackaged/main/default/objects/EDI_Checklist__c/fields/Subsidy_Funding_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Funding_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidy / Funding Transaction</label>
    <type>Checkbox</type>
</CustomField>