unpackaged/main/default/objects/EDI_Checklist__c/fields/Subsidy_Ops_Authorizationb__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Ops_Authorizationb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidy - Ops Authorization</label>
    <type>Checkbox</type>
</CustomField>