unpackaged/main/default/objects/EDI_Checklist__c/fields/Subsidy_S_SM_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_S_SM_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidy - S &amp;SM Authorization</label>
    <type>Checkbox</type>
</CustomField>