unpackaged/main/default/objects/EDI_Checklist__c/fields/Subsidy_UW_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_UW_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidy - UW Authorization</label>
    <type>Checkbox</type>
</CustomField>