unpackaged/main/default/objects/EDI_Checklist__c/validationRules/Only_one_Check_list.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_Check_list</fullName>
    <active>true</active>
    <description>Allows only one edi checklist per case</description>
    <errorConditionFormula>AND(
Case__r.EDI_Checklist_Count__c &gt;= 1,
ISNEW()
)</errorConditionFormula>
    <errorMessage>EDI Checklist not added, only one EDI Checklist is allowed for a case.</errorMessage>
</ValidationRule>