unpackaged/main/default/objects/EDI_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case__c</columns>
    <columns>NAME</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Broker__c</columns>
    <columns>EDI_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>